--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ItemDetails"></activity>
+        <activity android:name=".PaymentAndEarning"></activity>
+        <activity android:name=".ContactUs" />
+        <activity android:name=".AccountSettings" />
+        <activity android:name=".ItemDetails" />
         <activity android:name=".UserDetails" />
         <activity android:name=".Grabdeal" />
         <activity android:name=".ItemsDisp" />
